Changelog for mk-parallel-dump:

   * --ignoreengine was ignored (bug #1851461).

2007-12-16: version 1.0.2

   * Added debugging.
   * Updated common code.
   * --tables and --ignoretables now accept names in the form db.tbl.

2007-12-07: version 1.0.1

   * Updated common code.

2007-11-12: version 1.0.0

   * Dump views when --tab is given.
   * Use a module to find databases and tables.
   * Do not shell out to mysqldump for --tab.
   * Removed the --opt option.
   * Check for valid options to mysqldump.
   * Dump table definition and triggers separately for --tab.

2007-11-04: version 0.9.11

   * Made command-line help easier to use.
   * Removed the dependency on Term::ReadKey.
   * Replaced some code with modules that are unit-tested.
   * Added --ignoreengine command-line option.
   * Do not dump data for Federated or Merge tables by default.
   * Some versions of mysqldump tried to do LOCK TABLES and hung.

2007-10-15: version 0.9.10

   * ANSI_QUOTES SQL_MODE or SQL_QUOTE_SHOW_CREATE0= could cause an error.
   * Disabled --flushlog by default so error log doesn't get trashed.

2007-10-09: version 0.9.9

   * Table and database names were not quoted in arguments to mysqldump.
   * LOCK TABLES not inside transaction caused infinite wait (see http://bugs.mysql.com/31479)
   * Made exit status 1 if any errors, 0 if successful.

2007-10-05: version 0.9.8

   * Added --setperdb option.
   * Print each chunk's details to 00_master_data.sql file.
   * Do locking and list-building as late as possible for efficiency.
   * Error handling.

2007-10-03: version 0.9.6

   * Arguments to external program weren't honored.
   * System exit codes were lost, so errors weren't reported.
   * Added chunking.
   * Modularized and tested.
   * Added documentation.
   * Made --locktables negatable.
   * Changed default output to be less verbose and added --verbose option.
   * Added summary output.

2007-10-01: version 0.9.5

   * Initial release.